--- a/CS320_Lab02/war/WEB-INF/web.xml
+++ b/CS320_Lab02/war/WEB-INF/web.xml
@@ -7,8 +7,8 @@
 
   <!-- Servlets -->
   <servlet>
-    <servlet-name>Game</servlet-name>
-    <servlet-class>edu.ycp.cs320.lab02.game.Game</servlet-class>
+    <servlet-name>IndexServlet</servlet-name>
+    <servlet-class>edu.ycp.cs320.lab02.servlet.IndexServlet</servlet-class>
   </servlet>
   <servlet>
     <servlet-name>AddNumbersServlet</servlet-name>
